--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,110 @@
 h1 {
     color: #27aedb;
     text-align: center;
-    }
+}
     
+
+.menu{
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap:10px;
+}
 
 button{
     color: #27aedb;
     text-align: center;
     justify-content: center;
     align-items: center;
+}
+
+.items-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap:50px;
+}
+
+p{
+    text-align: center;
+}
+
+.item{
+    width: 550px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+
+    /* border:1px solid black; */
+}
+
+.imageDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 250px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.imageDiv img{
+    width: 100%;
+    height: 100%;
+}
+
+
+.details{
+    width: 300px;
+    height: 250px;
+    /* background-color: blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title_price{
+    height: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    gap:10px;
+    border-bottom: 1px solid black;
+}
+
+
+.left{
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right{
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: tomato;
+}
+
+
+.desc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
+
+
+button{
+    width: 150px;
+    height: 50px;
+    background-color: grey;
+    border:none;
 }
